tests/hm_typing/recursive_faulty.sy
A :: enum
    Q A
    Z
end

start :: fn do
    a :: A.Q 1
    print' a
end

// error: $Mismatch { .. }
